# LearnSDL2

./: .gitignore  LICENSE  README.md
L01HelloWorld/: CMakeLists.txt  main.c
L02NoSignal/: CMakeLists.txt  main.c
L03LoadPhoto/: CMakeLists.txt  main.c
L04DrawText/: CMakeLists.txt  main.c
L05MovePoints/: CMakeLists.txt  GPoint.cpp  GPoint.h  constants.h  main.cpp  main.h
L06DrawOnSurface/: CMakeLists.txt  main.c
L07CairoCircle/: CMakeLists.txt  main.c
L07CairoText/: CMakeLists.txt  main.c
L09sdl2-config-example/: CMakeLists.txt  main.c
L10InlinePhoto/: CMakeLists.txt  main.c
